src/styles/_navbar.scss
.module__nav {
  box-sizing: border-box;
  padding-top: 1.25rem;
  position: relative;
  z-index: 100;
  background-color: transparent;

    color: white;

    &:hover {
      background-color: white;
      transition: background-color 1s ease-in-out;
    }

    .nav-block {
      position: relative;
      z-index: 100;
    }

    .logo-nav {
      position: relative;
      z-index: 100;
    }

    .nav-items {
      gap: 7rem;
      font-size: 12px;

      .nav-link {
          position: relative;
          color: #fff;
          letter-spacing: 0.16em;
        }
        .nav-link::after {
          content: '';
          position: absolute;
          width: 100%;
          transform: scaleX(0);
          height: 2px;
          bottom: 0;
          left: 0;
          background-color: #fff;
          transform-origin: bottom right;
          transition: transform 0.5s ease-out;
        }

        .nav-link:hover::after {
          transform: scaleX(1);
          transform-origin: bottom left;
        }
      }
}

 /* #Mega Menu Styles
  –––––––––––––––––––––––––––––––––––––––––––––––––– */
  .mega-menu {
    display: none;
    position: absolute;
    justify-content: center;
    left: 0;
    right: 0;
    align-items: center;
    margin: auto;
    width: 100%;
    margin-top: 0;
    
    z-index: 10;

    .mega-menu__inner {
      display: block;
      position: relative;
      margin: 0 auto;
      top: 10px;
      padding: 25px 0px;
      background-color: #fff;
      z-index: 10 !important;
      animation: growDown 700ms ease-in-out forwards;
      transform-origin: top center;
     
      @keyframes growDown {
        0% {
          opacity: 0.8;
          transform: scaleY(0);
        
        }

        100% {
          opacity: 1;
          transform: scaleY(1);        
        }
    }
    transition: all 900s ease-in-out;

    /* using the index classname change the position of each child */



    
      .mega-menu__item {
        font-weight: normal;
        text-transform: none !important;
        font-size: 0.75rem;
        /* fade text in */
        animation: fadeIn 700ms ease-in-out forwards;
        @keyframes fadeIn {
          0% {
            opacity: 0;
          }
          100% {
            opacity: 1;
          }
        }
      }
    }
  }



  /* #hoverable Class Styles
  –––––––––––––––––––––––––––––––––––––––––––––––––– */
  .hoverable {
    position: static;
  }

  .hoverable:hover .mega-menu {
    display: flex;
  }

  .hoverNav {

    &:hover {
      color: #000000 !important;
     
      .nav-block {
        color: #000000 !important;
        .logo-nav {
          filter: invert(100%) !important;
        }
        .nav-link {
          color: #000000 !important;
          &::after {
            background-color: #000000 !important;
          }
        }
      }
    }
  }

  .menu-0,
  .menu-1  {
      text-align: left;
      background-color: #fff;
      width: 100vw;

       .mega-menu__list {
          padding-left: 20rem;
          background-color: #fff;
          width: 100vw;
          height: max-content;
          margin: 0 auto;
          
       }
    }

    .menu-2 {
      text-align: left;
      background-color: #fff;
      width: 100vw;

       .mega-menu__list {
          padding-left: 20rem;
          background-color: #fff;
          width: 100vw;
          height: max-content;
          margin: 0 auto;
          
       }
    }

  .fade-out {
    transition: opacity 0.5s ease-in-out;
    opacity: 0;
  }

  .fade-in {
    transition: opacity 0.2s ease-in-out;
    opacity: 1;
  }

  .cart-badge {
    right: 5px;
    top: 32px;
    padding: 10px
  }

 @media screen and (max-width: 768px) {
  #pageHeader {
    &:hover {
      background-color: transparent !important;
      color: #fff !important;
    }
  }
}

.inverted {
  filter: invert(100%) !important;
}

